--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffeo; /* warna kuning cerah*/
+  background-color: lighblue; /* warna kuning cerah*/
 font-family: Arial, sans-serif;/*jenis huruf yang bersih dan mudah dibaca*/
 color: #191970; /* warna teks utama */
 }
