--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body {
   background-color: lighblue; /* warna kuning cerah*/
-font-family: Arial, sans-serif;/*jenis huruf yang bersih dan mudah dibaca*/
+font-family: Arial, sans-serif; /* Jenis huruf yang bersih dan mudah dibaca*/
 color: #191970; /* warna teks utama */
 }
 .kartu-profil {
   width: 300px;
-  margin: 50px auto; /50px jarak atas/bawah,auto menengahkan kiri/kanan*?
+  margin: 50px auto; /* 50px jarak atas/bawah,auto menengahkan kiri/kanan*/
   padding: 20px;
   background-color: white;
   border-radius: 15px; /*membuat sudut menjadi melengkung*/
-box-shadow: 0 4px Bpx rgba (0,0,0,0,1); /* efek bayangan */
+  box-shadow: 0 4px Bpx rgba (0,0,0,0,1); /* efek bayangan */
+  text-align: center; /*menengahkan semua teks di dalam kartu */
 }
 .kartu-profil img {
   width: 150px;
-  border-radius: 50%; 
+  border-radius: 50%; /Trik untuk membuat gambar persegi menjadi lingkaran sempurna */
 }
